--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -18,6 +18,7 @@
     "live-server": "^1.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "serialize-javascript": "^3.1.0",
     "validator": "^13.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
