--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "glob-parent": "^5.1.2",
     "ini": "^1.3.6",
     "live-server": "^1.2.1",
     "react": "^16.13.1",
